# SlicerSurfaceMarkup

./: CMakeLists.txt  README.md  SurfaceMarkupLogo.xcf
GridSurfaceMarkups/: CMakeLists.txt  qSlicerGridSurfaceMarkupsModule.cxx  qSlicerGridSurfaceMarkupsModule.h
GridSurfaceMarkups/Logic/: CMakeLists.txt  vtkSlicerGridSurfaceMarkupsLogic.cxx  vtkSlicerGridSurfaceMarkupsLogic.h  vtkSlicerNurbsFittingLogic.cxx  vtkSlicerNurbsFittingLogic.h
GridSurfaceMarkups/MRML/: CMakeLists.txt  vtkMRMLMarkupsBezierSurfaceNode.cxx  vtkMRMLMarkupsBezierSurfaceNode.h  vtkMRMLMarkupsDistanceContourNode.h  vtkMRMLMarkupsGridSurfaceNode.cxx  vtkMRMLMarkupsGridSurfaceNode.h  vtkMRMLMarkupsSlicingContourNode.h
GridSurfaceMarkups/Resources/: qSlicerGridSurfaceMarkupsModule.qrc
GridSurfaceMarkups/VTKWidgets/: CMakeLists.txt  vtkBezierSurfaceSource.cxx  vtkBezierSurfaceSource.h  vtkNURBSSurfaceSource.cxx  vtkNURBSSurfaceSource.h  vtkSlicerBezierSurfaceRepresentation2D.h  vtkSlicerBezierSurfaceRepresentation3D.cxx  vtkSlicerBezierSurfaceRepresentation3D.h  vtkSlicerBezierSurfaceWidget.cxx  vtkSlicerBezierSurfaceWidget.h  vtkSlicerDistanceContourRepresentation2D.h  vtkSlicerDistanceContourRepresentation3D.cxx  vtkSlicerDistanceContourRepresentation3D.h  vtkSlicerDistanceContourWidget.cxx  vtkSlicerDistanceContourWidget.h  vtkSlicerGridSurfaceRepresentation2D.cxx  vtkSlicerGridSurfaceRepresentation2D.h  vtkSlicerGridSurfaceRepresentation3D.cxx  vtkSlicerGridSurfaceRepresentation3D.h  vtkSlicerGridSurfaceWidget.cxx  vtkSlicerGridSurfaceWidget.h  vtkSlicerShaderHelper.h  vtkSlicerSlicingContourRepresentation2D.h  vtkSlicerSlicingContourRepresentation3D.cxx  vtkSlicerSlicingContourRepresentation3D.h  vtkSlicerSlicingContourWidget.cxx  vtkSlicerSlicingContourWidget.h  vtkSourceSurface.cpp  vtkSourceSurface.h
GridSurfaceMarkups/Widgets/: CMakeLists.txt  qMRMLMarkupsGridSurfaceSettingsWidget.cxx  qMRMLMarkupsGridSurfaceSettingsWidget.h  qSlicerMarkupsAdditionalGridSurfaceOptionsWidget.cxx  qSlicerMarkupsAdditionalGridSurfaceOptionsWidget.h  qSlicerMarkupsGridSurfaceWidget.cxx  qSlicerMarkupsGridSurfaceWidget.h  qSlicerMarkupsGridSurfaceWidget.ui
GridSurfaceMarkups/Widgets/DesignerPlugins/: CMakeLists.txt  qMRMLMarkupsGridSurfaceSettingsWidgetPlugin.cxx  qMRMLMarkupsGridSurfaceSettingsWidgetPlugin.h  qSlicerMarkupsAdditionalGridSurfaceOptionsWidgetPlugin.cxx  qSlicerMarkupsAdditionalGridSurfaceOptionsWidgetPlugin.h  qSlicerMarkupsGridSurfaceWidgetPlugin.cxx  qSlicerMarkupsGridSurfaceWidgetPlugin.h
GridSurfaceMarkups/Widgets/Resources/UI/: qMRMLMarkupsGridSurfaceSettingsWidget.ui  qSlicerMarkupsAdditionalGridSurfaceOptionsWidget.ui  qSlicerMarkupsGridSurfaceWidget.ui
